--- a/sub-02.html
+++ b/sub-02.html
@@ -130,7 +130,8 @@
                       <ul>
                         <li>
                           <p>CARD ID</p>
-                          <input type="text" value="148" placeholder="id">
+                          <!-- value 148 -->
+                          <input type="text" placeholder="id">
                         </li>
                         <li>
                           <p>CARD GROUP</p>
@@ -151,11 +152,19 @@
                             <option value="">2nd Floor</option>
                             <option value="">Laboratory</option>
                           </select>
+                          <button type="button" class="modal-btn-plus d-flex align-items-center gap-1 justify-content-center"><i class="ri-add-line"></i>plus</button>
+                          <select name="" id="" class="modal-more-select">
+                            <option value="">All</option>
+                            <option value="">Entrance</option>
+                            <option value="">Server Room</option>
+                            <option value="">2nd Floor</option>
+                            <option value="">Laboratory</option>
+                          </select>
                         </li>
                       </ul>
                       <div class="btn-wrap">
-                        <button type="button" class="submit">check</button>
-                        <button type="button" class="close">cancel</button>
+                        <button type="button" class="submit">OK</button>
+                        <button type="button" class="close">Cancel</button>
                       </div>
                     </div>
                     <!-- //modal-inner -->
