--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="fonts/material.css" />
     <!-- [remix Icon] -->
     <link rel="stylesheet" href="fonts/remixicon/remixicon.css" />
+    <!-- [swiper slider] -->
+    <link rel="stylesheet" href="css/plugins/swiper-bundle.min.css" />
     <!-- [Template CSS Files] -->
     <link rel="stylesheet" href="css/style.css" id="main-style-link" />
     <link rel="stylesheet" href="css/style-preset.css" />
@@ -259,8 +261,8 @@
                         <!-- 리스트 -->
                         <!-- // 250306  list group안에 <h5>태그 <p>태그로 변경, .text-body font-style 추가, 폰트 길이 테스트 및 마진 수정 -->
                         <div class="log-wrap">
-                           <!-- [리스트 시작 :: 출입기록이 없을때 - 필요할때 사용] -->
-                           <!-- <div class="list-none text-center position-absolute top-50 start-50 translate-middle">
+                          <!-- [리스트 시작 :: 출입기록이 없을때 - 필요할때 사용] -->
+                          <!-- <div class="list-none text-center position-absolute top-50 start-50 translate-middle">
                             <i class="d-block mb-3"><img src="/images/customization/i-log-door.svg" alt="출입기록 아이콘"></i>
                             <h4 class="text-white" data-i18n="accessRecords">출입 기록이 없습니다.</h4>
                             <p class="text-white-50 lh-base" data-i18n="accessRecords2">출입 이력이 없습니다.<br> 출입시스템이 정상적으로 작동하는지 확인하세요.</p>
@@ -285,7 +287,7 @@
                                 </div>
                                 <div class="d-flex gap-2">
                                   <i class="ri-fingerprint-line"></i>
-                                  <p class="error-txt"  data-i18n="logerrorSample">지문 인식 오류</p>
+                                  <p class="error-txt" data-i18n="logerrorSample">지문 인식 오류</p>
                                 </div>
                                 <div class="flex-between-center">
                                   <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
@@ -337,7 +339,7 @@
                                 </div>
                                 <div class="d-flex gap-2">
                                   <i class="ri-bank-card-line"></i>
-                                  <p class="erro-txt"  data-i18n="unknown">Unknown</p>
+                                  <p class="erro-txt" data-i18n="unknown">Unknown</p>
                                 </div>
                                 <div class="flex-between-center">
                                   <span class="profile fs-5 d-flex gap-2" data-i18n="recordName">배경구</span>
@@ -474,12 +476,10 @@
     <script src="js/theme.js"></script>
     <script src="js/multi-lang.js"></script>
     <script src="js/plugins/feather.min.js"></script>
-    
-<script>
- 
 
+    <!-- swiper slide -->
+    <!-- <script src="js/plugins/swiper-bundle.min.js"></script> -->
 
-</script>
     <script src="js/chart.js"></script>
   </body>
   <!-- [Body] end -->
