--- a/sub-01.html
+++ b/sub-01.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="fonts/material.css" />
     <!-- [remix Icon] -->
     <link rel="stylesheet" href="fonts/remixicon/remixicon.css" />
+    <!-- [swiper slider] -->
+    <link rel="stylesheet" href="css/plugins/swiper-bundle.min.css" />
     <!-- [Template CSS Files] -->
     <link rel="stylesheet" href="css/style.css" id="main-style-link" />
     <link rel="stylesheet" href="css/style-preset.css" />
@@ -57,7 +59,7 @@
                           <div class="search-top-box mb-5 mt-4">
                             <div class="searchInput input-group d-flex align-items-center gap-2">
                               <label for="">Search</label>
-                              <input type="text" class="form-control" aria-label="Text input with dropdown button" placeholder="User Name">
+                              <input type="text" class="form-control" aria-label="Text input with dropdown button" placeholder="User Name" />
                               <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</button>
                               <ul class="dropdown-menu dropdown-menu-end">
                                 <li><a class="dropdown-item" href="#">Robert</a></li>
@@ -70,7 +72,7 @@
                             </div>
                             <!-- //검색 -->
                             <!-- [상태] -->
-                             <div class="status-select d-flex align-items-center gap-2">
+                            <div class="status-select d-flex align-items-center gap-2">
                               <label for="" class="w-50">Entry Status</label>
                               <select class="form-select" aria-label="Default select example">
                                 <option selected>All</option>
@@ -78,27 +80,27 @@
                                 <option value="2">Two</option>
                                 <option value="3">Three</option>
                               </select>
-                             </div>
-                             <!-- //상태 -->
+                            </div>
+                            <!-- //상태 -->
                             <!-- [날짜] -->
-                             <div class="date-wrap d-flex align-items-center gap-2">
-                              <label for="" >DATE</label>
-                              <input type="date" id="startDate" lang="en">
-                               <input type="date" id="endDate" lang="en">
-                               <select class="form-select" aria-label="date select">
+                            <div class="date-wrap d-flex align-items-center gap-2">
+                              <label for="">DATE</label>
+                              <input type="date" id="startDate" lang="en" />
+                              <input type="date" id="endDate" lang="en" />
+                              <select class="form-select" aria-label="date select">
                                 <option selected>This Week</option>
                                 <option value="1">monthly</option>
                                 <option value="2">yearly</option>
                                 <option value="3">daily</option>
                               </select>
-                             </div>
-                             <!-- //날짜 -->
-                              <!-- [버튼] -->
-                              <div class="btn-wrap d-flex align-items-center gap-2">
-                                <button type="button" class="btn btn-gray btn-md"><i class="ri-reset-left-fill"></i></button>
-                                <button class="btn ms-auto btn-primary w-100" type="button"><i class="ri-search-line fs-6 me-2"></i>Search</button>
-                              </div>
-                               <!-- //버튼 -->
+                            </div>
+                            <!-- //날짜 -->
+                            <!-- [버튼] -->
+                            <div class="btn-wrap d-flex align-items-center gap-2">
+                              <button type="button" class="btn btn-gray btn-md"><i class="ri-reset-left-fill"></i></button>
+                              <button class="btn ms-auto btn-primary w-100" type="button"><i class="ri-search-line fs-6 me-2"></i>Search</button>
+                            </div>
+                            <!-- //버튼 -->
                           </div>
                           <!-- //검색 입력폼 -->
                           <!-- [검색결과 리스트 상단] -->
@@ -151,6 +153,8 @@
     <script src="js/plugins/feather.min.js"></script>
     <script src="js/plugins/ag-grid-community.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script> -->
+    <!-- swiper slide -->
+    <script src="js/plugins/swiper-bundle.min.js"></script>
 
     <!-- js 추가 -->
     <script src="js/table.js"></script>
