--- a/sub-0201.html
+++ b/sub-0201.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="fonts/material.css" />
     <!-- [remix Icon] -->
     <link rel="stylesheet" href="fonts/remixicon/remixicon.css" />
+    <!-- [swiper slider] -->
+    <link rel="stylesheet" href="css/plugins/swiper-bundle.min.css" />
     <!-- [Template CSS Files] -->
     <link rel="stylesheet" href="css/style.css" id="main-style-link" />
     <link rel="stylesheet" href="css/style-preset.css" />
@@ -109,7 +111,7 @@
                               <li>
                                 <p>Card Information</p>
                                 <div class="d-flex align-items-center cbox" style="height: 38px;width: 65%;">
-                                  <span class="tag">148</span>
+                                  <span class="tag">34469</span>
                                 </div>
                               </li>
                             </ul>
@@ -207,6 +209,9 @@
     <script src="js/plugins/feather.min.js"></script>
     <script src="js/plugins/ag-grid-community.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script> -->
+
+    <!-- swiper slide -->
+    <script src="js/plugins/swiper-bundle.min.js"></script>
 
     <!-- js 추가 -->
     <script src="js/table.js"></script>
