--- a/sub-0201.html
+++ b/sub-0201.html
@@ -134,7 +134,7 @@
                       <ul>
                         <li>
                           <p>CARD ID</p>
-                          <!-- value 148 -->
+                          <!-- value 34469 -->
                           <input type="text" placeholder="id">
                         </li>
                         <li>
@@ -207,14 +207,26 @@
     <script src="js/theme.js"></script>
     <script src="js/multi-lang.js"></script>
     <script src="js/plugins/feather.min.js"></script>
-    <script src="js/plugins/ag-grid-community.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.js"></script> -->
 
     <!-- swiper slide -->
     <script src="js/plugins/swiper-bundle.min.js"></script>
 
-    <!-- js 추가 -->
-    <script src="js/table.js"></script>
+    <!-- visual-slide -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        new Swiper(".swiper", {
+          loop: true,
+          effect: "fade",
+          fadeEffect: { crossFade: true },
+          autoplay: {
+            delay: 6000,
+            disableOnInteraction: false,
+          },
+          slidesPerView: 1,
+        });
+      });
+    </script>
+
   </body>
   <!-- [Body] end -->
 </html>
