main visual slider update

--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
         new Swiper(".swiper", {
           loop: true,
           effect: "fade",
+          speed:2000,
           fadeEffect: { crossFade: true },
           autoplay: {
             delay: 6000,
