--- a/subkr-01.html
+++ b/subkr-01.html
@@ -167,6 +167,7 @@
         new Swiper(".swiper", {
           loop: true,
           effect: "fade",
+          speed:10000,
           fadeEffect: { crossFade: true },
           autoplay: {
             delay: 6000,
