--- a/sub-01.html
+++ b/sub-01.html
@@ -162,6 +162,7 @@
         new Swiper(".swiper", {
           loop: true,
           effect: "fade",
+          speed:10000,
           fadeEffect: { crossFade: true },
           autoplay: {
             delay: 6000,
