--- a/sub-02.html
+++ b/sub-02.html
@@ -227,6 +227,7 @@
         new Swiper(".swiper", {
           loop: true,
           effect: "fade",
+          speed:10000,
           fadeEffect: { crossFade: true },
           autoplay: {
             delay: 6000,
