--- a/sub-02.html
+++ b/sub-02.html
@@ -187,9 +187,9 @@
                   
                 </div>
                 <!-- //tab_02 -->
-                <div class="tab-pane fade" id="tab-menu-pane-3" role="tabpanel" aria-labelledby="tab-menu-2" tabindex="0">세번째 탭</div>
+                <div class="tab-pane fade" id="tab-menu-pane-3" role="tabpanel" aria-labelledby="tab-menu-2" tabindex="0"></div>
                 <!-- //tab_03 -->
-                <div class="tab-pane fade" id="tab-menu-pane-4" role="tabpanel" aria-labelledby="tab-menu-2" tabindex="0">네번째 탭</div>
+                <div class="tab-pane fade" id="tab-menu-pane-4" role="tabpanel" aria-labelledby="tab-menu-2" tabindex="0"></div>
                 <!-- //tab_04 -->
               </div>
             </div>
